<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.myster</groupId>
    <artifactId>Myster</artifactId>
    <version>10.0.0</version>

    <dependencies>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>WaifUPnP</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>com.mpatric</groupId>
            <artifactId>mp3agic</artifactId>
            <version>0.9.1</version>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source> <!-- Set your JDK
        version here -->
        <maven.compiler.target>21</maven.compiler.target> <!-- Set your JDK
        version here -->
        <outputName>MysterBuild</outputName> <!-- Custom property for output filename -->
        <mainclass>com.myster.Myster</mainclass>
      
    </properties>

    <build>
        <finalName>${project.artifactId}-partial</finalName> <!-- Use custom property for output
        file name -->

        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <!-- JAR Plugin for packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <outputDirectory>${project.basedir}/bin</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
        
                            <transformers>
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainclass}</mainClass>
                                </transformer>
                            </transformers>
                            <outputFile>${project.basedir}/bin/${outputName}.jar</outputFile> 
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Exec plugin for jpackage -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Windows Profile -->
        <profile>
            <id>windows-build</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>package-app-windows</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>${project.basedir}/bin</argument>
                                        <argument>--name</argument>
                                        <argument>Myster</argument>
                                        <argument>--main-class</argument>
                                        <argument>${mainclass}</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.desktop,java.prefs,java.xml</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.basedir}/bin/${outputName}.jar</argument>
                                        <argument>--win-menu</argument>
                                        <argument>--win-menu-group</argument>
                                        <argument>Myster</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                        <argument>--icon</argument>
                                        <argument>program_icon.ico</argument>
                                        <argument>--type</argument>
                                        <argument>exe</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- macOS Profile -->
        <profile>
            <id>macos-build</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>package-app-macos</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--input</argument>
                                        <argument>${project.basedir}/bin</argument>
                                        <argument>--name</argument>
                                        <argument>Myster</argument>
                                        <argument>--main-class</argument>
                                        <argument>${mainclass}</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base,java.desktop,java.prefs,java.xml</argument>
                                        <argument>--main-jar</argument>
                                        <argument>${project.basedir}/bin/${outputName}.jar</argument>
                                        <argument>--type</argument>
                                        <argument>dmg</argument>
                                        <argument>--icon</argument>
                                        <argument>program_icon.icns</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>

